--- a/netflix-clone/public/data/app_data.json
+++ b/netflix-clone/public/data/app_data.json
@@ -83,10 +83,15 @@
 
     "content": {
         "icons": {
-            "play_button": "/images/content/play_button.png",
-            "add_button": "/images/content/add_button.png",
-            "like_button": "/images/content/like_button.png",
-            "dropdown_button": "/images/content/dropdown_button.png",
+            "play_button": "/images/content/play_icon.png",
+            "add_button": "/images/content/add_icon.png",
+            "like_button": "/images/content/like_icon.png",
+            "like_button_active": "/images/content/like_icon_active.png",
+            "dislike_button": "/images/content/dislike_icon.png",
+            "dislike_button_active": "/images/content/dislike_icon_active.png",
+            "best_button": "/images/content/best_icon.png",
+            "best_button_active": "/images/content/best_icon_active.png",            
+            "dropdown_button": "/images/content/dropdown_icon.png",
             "backward_button": "/images/content/backward_icon.png",
             "forward_button": "/images/content/forward_icon.png",
             "ranks" : [
