--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   }
 }
