feat(search): Implement real-time search interaction

--- a/netflix-clone/public/data/app_data.json
+++ b/netflix-clone/public/data/app_data.json
@@ -24,6 +24,18 @@
                     },
                     "user_input": {
                         "text": "제목, 사람, 장르"
+                    },
+                    "icons": {
+                        "play_button": "/images/content/play_icon.png",
+                        "wish_button": "/images/content/wish_icon.png",
+                        "wish_button_active": "/images/content/wish_icon_active.png",
+                        "like_button": "/images/content/like_icon.png",
+                        "like_button_active": "/images/content/like_icon_active.png",
+                        "dislike_button": "/images/content/dislike_icon.png",
+                        "dislike_button_active": "/images/content/dislike_icon_active.png",
+                        "best_button": "/images/content/best_icon.png",
+                        "best_button_active": "/images/content/best_icon_active.png",            
+                        "dropdown_button": "/images/content/dropdown_icon.png"
                     }
                 }
             },
